# MBINCompiler-test-data

./: .gitignore  README.md  extract_data.py  index.json  pyproject.toml  upload-github-release-asset.sh
.circleci/: config.yml
.github/workflows/: pipeline.yml
data/: .version  .version.bak  ATLASPATHTABLE.MBIN  BASEBUILDINGCOSTSTABLE.MBIN  BASEBUILDINGTABLE.MBIN  BASECOMPUTERMISSIONTABLE.MBIN  CHARACTERCUSTOMISATIONDESCRIPTORGROUPSDATA.MBIN  CHARACTERCUSTOMISATIONUIDATA.MBIN  COMMUNITYMISSIONTABLE.MBIN  CONSUMABLEITEMTABLE.MBIN  COREMISSIONTABLE.MBIN  COSTTABLE.MBIN  CREATUREDATATABLE.MBIN  CREATUREGENERATIONARCHETYPES.MBIN  DAMAGETABLE.MBIN  DEFAULTREALITY.MBIN  DEFAULTSAVEDATA.MBIN  ENABLINGCONDITIONSTABLE.MBIN  EXPERIENCESPAWNTABLE.MBIN  FLEETMISSIONTABLE.MBIN  GCAISPACESHIPGLOBALS.GLOBAL.MBIN  GCATLASGLOBALS.GLOBAL.MBIN  GCAUDIOGLOBALS.GLOBAL.MBIN  GCBUILDABLESHIPGLOBALS.GLOBAL.MBIN  GCBUILDINGGLOBALS.GLOBAL.MBIN  GCCAMERAGLOBALS.GLOBAL.MBIN  GCCHARACTERGLOBALS.GLOBAL.MBIN  GCCOLLISIONTABLE.GLOBAL.MBIN  GCCREATUREGLOBALS.MBIN  GCDEBUGEDITORGLOBALS.MBIN  GCDEBUGOPTIONS.GLOBAL.MBIN  GCEFFECTSGLOBALS.GLOBAL.MBIN  GCENVIRONMENTGLOBALS.GLOBAL.MBIN  GCFISHINGGLOBALS.GLOBAL.MBIN  GCFLEETGLOBALS.GLOBAL.MBIN  GCFREIGHTERBASEGLOBALS.GLOBAL.MBIN  GCGALAXYGLOBALS.GLOBAL.MBIN  GCGAMEPLAYGLOBALS.GLOBAL.MBIN  GCGAMETABLEGLOBALS.MBIN  GCGRAPHICSGLOBALS.GLOBAL.MBIN  (+55 more)
data/FONTS/: FONTTABLE.MBIN
data/MATERIALS/: BASIC.MATERIAL.MBIN
data/METADATA/: ABANDLIKEFREIGHTERBASE.MBIN  ABANDONEDFREIGHTERBASE.MBIN  AISPACESHIPATTACKDATATABLE.MBIN  AREADAMAGETABLE.MBIN  (+221 more)
utils/: update.py
(+388 files in other folders)
