[project]
name = "MBINCompiler-test-data"
description = "Tool for extracting and updating the test data used for MBINCompiler"
readme = "README.md"
requires-python = ">=3.9, <4"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["modding"]
authors = [
  {name = "monkeyman192"}
]
maintainers = [
  {name = "monkeyman192"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: Microsoft",
  "Operating System :: MacOS",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "hgpaktool"
]
dynamic = ["version"]

[tool.uv]
python-preference = "only-system"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I"]
preview = true

[project.urls]
homepage = "https://github.com/monkeyman192/MBINCompiler-test-data"
repository = "https://github.com/monkeyman192/MBINCompiler-test-data.git"
